<resources>

    <!-- accessibility labels -->
    <string name="navigation_title">navigation</string>
    <string name="home_title">Home</string>
    <string name="profile_title">Account</string>
    <string name="rating_img_error">rating img corrupted</string>
    <string name="movie_rating">rating 4</string>
    <string name="ic_search_description">search</string>
    <!-- /accessibility labels -->

    <string name="app_name">tetamtsandroid</string>
    <string name="age_sign">18+</string>
    <string name="movie_category">Боевики</string>
    <string name="movie_date">22.04.2021</string>
    <string name="movie_name">Гнев человеческий</string>
    <string name="movie_description">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>

    <string name="actors_section_title">Актеры</string>
    <string name="actor_name3">Джош Харнетт</string>
    <string name="actor_name2">Холт Маккэллани</string>
    <string name="actor_name1">Джейсон Стэйтем</string>

    <string name="movie_list_title">Популярное сейчас</string>
    <string name="movie_list_category_title">Все категории</string>
    <string name="empty_movies_list">Сейчас здесь нет фильмов, но мы уже отправили режиссёра снимать фильм для вас</string>
    <string name="not_done">UNDER CONSTRUCTION</string>
    <string name="errorHolderText">Ошибка при загрузке. Потяните вниз, чтобы обновить страницу</string>
    <string name="movies_point_title">Movies</string>
    <string name="user_exist_error">Пользователь с таким email же существует</string>
    <string name="confirm_registration_button_title">Зарегистрироваться</string>
    <string name="favourite_categories_pick_title">Выберите интересные для вас жанры:</string>
    <string name="user_password_field_hint">Пароль</string>
    <string name="user_email_field_hint">Почта</string>
    <string name="user_name_field_hint">Имя</string>
    <string name="favourite_categories_title">Интересы</string>
    <string name="user_data_title">Личные данные</string>
    <string name="user_phone_field_hint">Телефон</string>
    <string name="user_settings_title">Настройки</string>
    <string name="support_section_title">Приложение</string>
    <string name="user_logout_button_title">ВЫЙТИ</string>
    <string name="to_registration_button_title">РЕГИСТРАЦИЯ</string>
    <string name="confirm_login_button_title">ВОЙТИ</string>
    <string name="empty_fields_error">Заполните все поля</string>
    <string name="user_not_found_error">Пользователь не найден</string>
    <string name="profile_support_issue_title">Сообщить о проблеме</string>
    <string name="profile_support_ask_title">Задать вопрос</string>

</resources>