<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/offset_20"
    android:layout_marginEnd="@dimen/offset_20">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_15"
        app:boxBackgroundColor="@color/grey"
        app:errorEnabled="true"
        app:hintTextColor="#4D000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_name_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/user_name_field_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_20"
        app:boxBackgroundColor="@color/grey"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_name_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_email_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email_field_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_20"
        android:inputType="textPassword"
        app:boxBackgroundColor="@color/grey"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_email_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_password_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_password_field_hint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/profile_favourite_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_20"
        android:text="@string/favourite_categories_pick_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_password_input" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_favourite_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_favourite_list_title"
        tools:listitem="@layout/category_item" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_login_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/confirm_registration_button_title"
        android:textColor="@color/black"
        android:textSize="@dimen/space_16"
        app:backgroundTint="#C4C4C4"
        app:cornerRadius="10dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_email_input" />

    <TextView
        android:id="@+id/login_error_wrong_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_20"
        android:text="@string/user_exist_error"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_favourite_list" />
</androidx.constraintlayout.widget.ConstraintLayout>