<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movie_details_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ImageView
        android:id="@+id/movie_cover"
        android:layout_width="match_parent"
        android:layout_height="@dimen/movie_cover_height"
        android:importantForAccessibility="no"
        android:scaleType="matrix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/offset_20"
        android:layout_marginTop="@dimen/offset_30"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/movie_details_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/guideline_movie_details" />

    <ImageView
        android:id="@+id/movie_details_panel_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/movie_cover"
        app:layout_constraintTop_toTopOf="@id/movie_details_guideline"
        app:srcCompat="@drawable/movie_details_top_rounded" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/movie_details_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/offset_32"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/movie_details_guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/offset_20">

            <TextView
                android:id="@+id/movie_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_border"
                android:padding="@dimen/padding_4"
                android:paddingStart="@dimen/padding_10"
                android:paddingEnd="@dimen/padding_10"
                android:text="@string/movie_category"
                android:textSize="@dimen/space_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/offset_16"
                android:layout_marginTop="@dimen/offset_3"
                android:text="@string/movie_date"
                android:textSize="@dimen/space_12"
                app:layout_constraintStart_toEndOf="@id/movie_category"
                app:layout_constraintTop_toTopOf="@id/movie_category" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offset_16"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/movie_name"
                android:textSize="@dimen/space_20"
                app:layout_constraintStart_toStartOf="@id/movie_category"
                app:layout_constraintTop_toBottomOf="@id/movie_date" />

            <TextView
                android:id="@+id/age_sign"
                android:layout_width="@dimen/age_sign_dimen"
                android:layout_height="@dimen/age_sign_dimen"
                android:layout_marginEnd="@dimen/offset_20"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="@string/age_sign"
                android:textAlignment="center"
                android:textSize="@dimen/space_14"
                app:layout_constraintBottom_toBottomOf="@+id/movie_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon_star"
                android:layout_width="@dimen/ic_star_width"
                android:layout_height="@dimen/ic_star_height"
                android:layout_marginTop="@dimen/offset_8"
                android:contentDescription="@string/movie_rating"
                android:src="@drawable/ic_star_filled"
                app:layout_constraintStart_toStartOf="@id/movie_title"
                app:layout_constraintTop_toBottomOf="@id/movie_title" />

            <ImageView
                android:id="@+id/icon_star2"
                android:layout_width="@dimen/ic_star_width"
                android:layout_height="@dimen/ic_star_height"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_star_filled"
                app:layout_constraintStart_toEndOf="@id/icon_star"
                app:layout_constraintTop_toTopOf="@id/icon_star" />

            <ImageView
                android:id="@+id/icon_star3"
                android:layout_width="@dimen/ic_star_width"
                android:layout_height="@dimen/ic_star_height"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_star_filled"
                app:layout_constraintStart_toEndOf="@id/icon_star2"
                app:layout_constraintTop_toTopOf="@id/icon_star" />

            <ImageView
                android:id="@+id/icon_star4"
                android:layout_width="@dimen/ic_star_width"
                android:layout_height="@dimen/ic_star_height"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_star_filled"
                app:layout_constraintStart_toEndOf="@id/icon_star3"
                app:layout_constraintTop_toTopOf="@id/icon_star" />

            <ImageView
                android:id="@+id/icon_star5"
                android:layout_width="@dimen/ic_star_width"
                android:layout_height="@dimen/ic_star_height"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_star"
                app:layout_constraintStart_toEndOf="@id/icon_star4"
                app:layout_constraintTop_toTopOf="@id/icon_star" />

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offset_20"
                android:layout_marginEnd="@dimen/offset_8"
                android:text="@string/movie_description"
                android:textSize="@dimen/space_14"
                app:layout_constraintStart_toStartOf="@id/icon_star"
                app:layout_constraintTop_toBottomOf="@id/icon_star" />

            <TextView
                android:id="@+id/actors_section_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offset_35"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/actors_section_title"
                android:textSize="@dimen/space_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_description" />

            <HorizontalScrollView
                android:id="@+id/actors_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/offset_16"
                android:scrollbars="none"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/actors_section_title">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/offset_46">

                    <ImageView
                        android:id="@+id/actor_photo1"
                        android:layout_width="@dimen/actor_photo_width"
                        android:layout_height="@dimen/actor_photo_height"
                        android:importantForAccessibility="no"
                        android:src="@drawable/img_actor1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/offset_12"
                        android:text="@string/actor_name1"
                        android:textSize="@dimen/space_12"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/actor_photo1"
                        app:layout_constraintTop_toBottomOf="@id/actor_photo1" />

                    <ImageView
                        android:id="@+id/actor_photo2"
                        android:layout_width="@dimen/actor_photo_width"
                        android:layout_height="@dimen/actor_photo_height"
                        android:layout_marginStart="@dimen/offset_10"
                        android:importantForAccessibility="no"
                        android:src="@drawable/img_actor2"
                        app:layout_constraintStart_toEndOf="@id/actor_photo1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/offset_12"
                        android:text="@string/actor_name2"
                        android:textSize="@dimen/space_12"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/actor_photo2"
                        app:layout_constraintTop_toBottomOf="@id/actor_photo2" />

                    <ImageView
                        android:id="@+id/actor_photo3"
                        android:layout_width="@dimen/actor_photo_width"
                        android:layout_height="@dimen/actor_photo_height"
                        android:layout_marginStart="@dimen/offset_10"
                        android:importantForAccessibility="no"
                        android:scaleType="fitStart"
                        android:src="@drawable/img_actor3"
                        app:layout_constraintStart_toEndOf="@id/actor_photo2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/offset_12"
                        android:text="@string/actor_name3"
                        android:textSize="@dimen/space_12"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/actor_photo3"
                        app:layout_constraintTop_toBottomOf="@id/actor_photo3" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
